--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.1.1"
   }
