--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.12.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
