--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
+#mongoDB
 MONGODB_URI=mongodb+srv://admin:wlgns123@cluster0.e4yesng.mongodb.net/?retryWrites=true&w=majority
 API_URI="http://localhost:3000/api/nut2"
 
+#github
 GITHUB_ID="9de4dfe54f94dbf89a34"
 GITHUB_SECRET="df71a1d65cc1d7bac70d81c9def26b20029d5950"
 
+#google
 GOOGLE_CLIENT_ID="187045356055-5bv6fovr6rs3dqfapddvq3uj4dlrhp1b.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
