--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #mongoDB
-MONGODB_URI=mongodb+srv://admin:wlgns123@cluster0.e4yesng.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:wlgns123@cluster0.e4yesng.mongodb.net/nut2?retryWrites=true&w=majority
 API_URI="http://localhost:3000/api/nut2"
 
 #github
@@ -9,3 +9,8 @@ GITHUB_SECRET="df71a1d65cc1d7bac70d81c9def26b20029d5950"
 #google
 GOOGLE_CLIENT_ID="187045356055-5bv6fovr6rs3dqfapddvq3uj4dlrhp1b.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+
+#kakao
+KAKAO_CLIENT_ID="62d40b8418a7ee736bc1b4d08c53100f"
+KAKAO_CLIENT_SECRET="Bz57j3ZIWCWyY6xEsVi3HuNyMmEs63br"
+"
