--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "install": "^0.13.0",
     "mongodb": "^5.3.0",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
@@ -33,6 +35,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.1.1"
