--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "install": "^0.13.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.1.1"
