--- a/.babelrc
+++ b/.babelrc
@@ -2,12 +2,13 @@
   "presets": ["next/babel"],
   "plugins": [
     [
-      "babel-plugin-styled-components",
+      "styled-components",
       {
-        "fileName": true,
+        "ssr": true,
         "displayName": true,
-        "pure": true
+        "preprocess": false
       }
     ]
   ]
 }
+ 
